tutorial-service/openshift/06_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tutorial-service

spec:
  selector:
    app: tutorial-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
