tutorial-service/openshift/07_route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: tutorial-service

spec:
  to:
    kind: Service
    name: tutorial-service

  port:
    targetPort: 8080

  tls:
    termination: edge
